force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Age_of_Goal__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Goal__c</fullName>
    <description>Age of the Goal from Start Date to Today</description>
    <complianceGroup>Integrity - Trusted;Source_Salesforce;Privacy - Personal Information</complianceGroup>
    <formula>TODAY() -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the Goal from Start Date to Today</inlineHelpText>
    <label>Age of Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>