force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Highly_Trusted</complianceGroup>
    <description>Balance Remaining</description>
    <formula>IF(
   FinServ__TargetValue__c &lt;= 0, 
   0, 
   FinServ__TargetValue__c -  FinServ__ActualValue__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>