force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Days_Remaining_to_Goal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_to_Goal_End_Date__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy - Personal Information</complianceGroup>
    <description>Days Remaining to Goal End Date</description>
    <formula>IF( 
   (ISBLANK(FinServ__TargetDate__c)  || (TODAY() &gt; FinServ__TargetDate__c)), 
   0, 
   FinServ__TargetDate__c - TODAY()
)</formula>
    <inlineHelpText>Days Remaining to Goal End Date</inlineHelpText>
    <label>Days Remaining to Goal End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>