force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Financial Account object. This will be used to link Goals with Savings Accounts</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Goals</relationshipLabel>
    <relationshipName>Financial_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>