force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Financial_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Number__c</fullName>
    <complianceGroup>Integrity_Highly_Trusted</complianceGroup>
    <formula>Financial_Account__r.FinServ__FinancialAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Account Number</label>
    <type>Text</type>
</CustomField>