force-app/main/default/objects/FinServ__FinancialGoal__c/fields/FinServ__PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PrimaryOwner__c</fullName>
    <complianceGroup>Integrity_Highly_Trusted</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesIndividual</value>
        </filterItems>
        <filterItems>
            <field>Account.FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Financial Goals</relationshipLabel>
    <relationshipName>ClientFinancialGoals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>