force-app/main/default/objects/FinServ__FinancialGoal__c/fields/FinServ__Type__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Type__c</fullName>
    <complianceGroup>Integrity_Trusted</complianceGroup>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Home Purchase</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>New Business Acquisition</fullName>
            </value>
            <value>
                <fullName>New Customer Acquisition</fullName>
            </value>
            <value>
                <fullName>New Services</fullName>
            </value>
            <value>
                <fullName>Large Purchase</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>