force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Personal Information</complianceGroup>
    <description>Icon customer has used to represent their goal.</description>
    <label>Icon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>