force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Progress_Made_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Made_to_Date__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Highly_Trusted;Privacy - Personal Information</complianceGroup>
    <description>Progress made to date as a percentage</description>
    <formula>IF(
   FinServ__TargetValue__c  &lt;= 0, 
   0, 
   IF(
      FinServ__ActualValue__c &lt;= 0, 
      0, 
      FinServ__ActualValue__c / FinServ__TargetValue__c
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Progress made to date as a percentage</inlineHelpText>
    <label>% Progress Made to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>