force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Recommended_Savings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Savings_Amount__c</fullName>
    <complianceGroup>Integrity_Highly_Trusted</complianceGroup>
    <description>Recommended daily savings amount</description>
    <formula>IF(
  Days_Remaining_to_Goal_End_Date__c &gt; 0, 
  Balance_Remaining__c /  Days_Remaining_to_Goal_End_Date__c, 
  Balance_Remaining__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recommended daily savings amount</inlineHelpText>
    <label>Recommended Savings Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>