force-app/main/default/objects/FinServ__FinancialGoal__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Source_Fabric;Privacy - Personal Information</complianceGroup>
    <description>Goal start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>